--- a/LaTeX-ToUnicode/README
+++ b/LaTeX-ToUnicode/README
@@ -1,11 +1,11 @@
 
 
 This archive contains the distribution LaTeX-ToUnicode,
-version 0.03:
+version 0.04:
 
   Convert LaTeX commands to Unicode
 
-This software is copyright (c) 2010 by Gerhard Gossen.
+This software is copyright (c) 2010-2016 by Gerhard Gossen and Boris Veytsman
 
 This is free software; you can redistribute it and/or modify it under
 the same terms as the Perl 5 programming language system itself.
