--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 			   BibTeX Perl Libs
-			     Version 1.5
-		  Gerhard Gossen and Boris Veytsman
+			     Version 1.6
+		  Gerhard Gossen, Boris Veytsman and Karl Berry
 
 This package provides BibTeX related Perl libraries by Gerhard Gossen,
 maintained and repackaged by Boris Veytsman for TeX Live and other
@@ -15,7 +15,7 @@ Releases: https://ctan.org/pkg/bibtexperllibs
 
 Changes:
 
-2020-12-10 LaTeX::ToUnicode 0.11 for more ltx2crossrefxml support.
+ Version 1.6 2020-12-10 LaTeX::ToUnicode 0.11 for more ltx2crossrefxml support.
            (No changes to BibTeX::Parser.)
 
   version 1.5 Upgraded BibTeX::Parser to 1.02 (bugfixes)
