script/ltx2unitxt: new script to do the conversion from the cmdline.
ToUnicode/Tables.pm (%MARKUPS): switch to hash and give simple html equivalents.
(%ARGUMENT_COMMANDS): new hash with other cmds taking args: \emph,
\enquote, \path.

(%CONTROL_SYMBOLS): new hash, separate from %CONTROL_WORDS.
(%CONTROL_WORDS_EMPTY): new hash, \commands that map to the empty string.
(%CONTROL_WORDS): new hash, all the control words.
(%COMMANDS): replace with above.

(%ACCENT_SYMBOLS),
(%ACCENT_LETTERS): new hashes to separate symbols and letters.
(%ACCENTS): replace with above.

ToUnicode.pm (EXPORT_OK): add debuglevel and $endcw.
($endcw): regexp to terminate a control word; used throughout.
(debuglevel, $debug, _debug): simple debugging output.
(convert): support html output, entities, more conversions;
  convert ~ to space here directly.
(_convert_commands_with_arg): new fn to handle %ARGUMENT_COMMANDS.
(_convert_urls): new fn for \url and \href.
(_convert_control_words): new fn, since TeX parsing for control words
  vs. symbols is different.
(_convert_accents): handle control symbols (\') and letters (\c) differently.
(_convert_symbols): all control words.
(_convert_specials): no longer needed, handled as control symbols.
(_convert_markups): better parsing.
(_convert_markups_html): support (simple) html for markup commands.
(debug_hash_as_string): new fn.

Makefile.TDS: new file, copied from CTAN.
head.ltx: new --prefile for latex-tounicode documentation.

README, LICENSE: update copyright years, release info.

--- a/README
+++ b/README
@@ -1,24 +1,32 @@
 			   BibTeX Perl Libs
-			     Version 1.6
-		  Gerhard Gossen, Boris Veytsman and Karl Berry
+			     Version 1.7
+		  Gerhard Gossen, Boris Veytsman, Karl Berry
 
-This package provides BibTeX related Perl libraries by Gerhard Gossen,
+This package provides BibTeX-related Perl libraries by Gerhard Gossen,
 maintained and repackaged by Boris Veytsman for TeX Live and other
 TDS-compliant distributions.  The libraries are written in pure Perl,
 so shoud work out of the box on any architecture.
 
 To use them in your scripts, add to the @INC variable the directory
-scripts/bibtexperllibs inside your TeX distribution.
+scripts/bibtexperllibs inside your TeX distribution. A script ltx2unitxt
+packages the conversion libraries for use from the command line.
 
 Bug reports, source code: https://github.com/borisveytsman/bibtexperllibs
 Releases: https://ctan.org/pkg/bibtexperllibs
 
+For an example of using the LaTeX::ToUnicode module, see the
+crossrefware package (which is also the reason for continued development).
+
 Changes:
 
- Version 1.6 2020-12-10 LaTeX::ToUnicode 0.11 for more ltx2crossrefxml support.
-           (No changes to BibTeX::Parser.)
+  version 1.7 2021-01-18 LaTeX::ToUnicode 0.51 for still more
+		ltx2crossrefxml support, including simple html output.
+		(No changes to BibTeX::Parser.)
 
-  version 1.5 Upgraded BibTeX::Parser to 1.02 (bugfixes)
+  version 1.6 2020-12-10 LaTeX::ToUnicode 0.11 for more ltx2crossrefxml
+		support. (No changes to BibTeX::Parser.)
+
+  version 1.5  Upgraded BibTeX::Parser to 1.02 (bugfixes)
 
   version 1.4  Upgraded BibTeX::Parser to 1.01
 
