--- a/LaTeX-ToUnicode/Changes
+++ b/LaTeX-ToUnicode/Changes
@@ -1,5 +1,7 @@
 Changes for LaTeX::ToUnicode
 
+0.53    2023-08-20 Tests fixed, new release
+
 0.52	2022-11-07  Support many more control sequences, \kern removal,
         \<newline>, etc. Add ltxunitxt script to access functionality
         from command line.
