--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 			   BibTeX Perl Libs
-			     Version 1.8
+			     Version 1.9
 		  Gerhard Gossen, Boris Veytsman, Karl Berry
 
 This package provides BibTeX-related Perl libraries by Gerhard Gossen,
@@ -18,6 +18,9 @@ For an example of using the LaTeX::ToUnicode module, see the
 crossrefware package (which is also the reason for continued development).
 
 Changes:
+
+  version 1.9 2023-11-18 Now braces are rendered correctly by
+  	      		 LaTeX-ToUnicode
 
   version 1.8 2023-08-20 Tests updates, timestamp updates.
  
