Prepared for release

--- a/BibTeX-Parser/Changes
+++ b/BibTeX-Parser/Changes
@@ -1,5 +1,7 @@
 Revision history for BibTeX::Parser
 
+1.92.   2025-07-09 New numbering scheme.  Bug fixes.  Debug statements
+
 1.04    2023-08-20  New release
 
 1.03    2022-11-06
