--- a/LaTeX-ToUnicode/Changes
+++ b/LaTeX-ToUnicode/Changes
@@ -1,5 +1,7 @@
 Changes for LaTeX::ToUnicode
 
+1.92    2024-07-09 New numbering scheme.  Debug statements
+
 0.54    2023-11-17 Better handling of \{ \}.  New release
 
 0.53    2023-08-20 Tests fixed, new release
