--- a/README
+++ b/README
@@ -21,9 +21,10 @@ development here).
 Changes:
 
   version 1.93 2025-08-31 BibTeX::Parser: match @string identifiers
-                          case-insensitively, as BibTeX does.
+                            case-insensitively, as BibTeX does.
                           LaTeX::ToUnicode: recognize \guillemetleft
-                          and \guillemetright.
+                            and \guillemetright; convert \allowbreak
+                            to &#x200B; (zero-width space) instead of <wbr>.
 
   version 1.92 2025-07-09 For BibTeX::Parser, new options hash to allow
                           omitting warnings for undefined ack-* strings.
