--- a/BibTeX-Parser/t/bibs/06.bib
+++ b/BibTeX-Parser/t/bibs/06.bib
@@ -17,7 +17,7 @@ this is text, which is ignored by bibtex.
 
 @STRING{ gerhard = "Gerhard" }
 
-@STRING{ gossen = "Gossen" }
+@STRING{ GOSSEN = "Gossen" }
 
 @BOOK{ key2,
 	author 	= gerhard # " " # gossen,
